--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -1,5 +1,5 @@
 = Spring Data Couchbase - Reference Documentation
-Michael Nitschinger, Oliver Gierke
+Michael Nitschinger, Oliver Gierke, Simon Baslé
 :revnumber: {version}
 :revdate: {localdate}
 :toc:
@@ -17,13 +17,15 @@ include::preface.adoc[]
 [[reference]]
 = Reference Documentation
 
+= Migrating from Spring-Data-Couchbase 1.x to 2.x
+include::migrating.adoc[]
+
 :leveloffset: +1
 include::configuration.adoc[]
 include::entity.adoc[]
 include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
 include::template.adoc[]
-include::caching.adoc[]
 :leveloffset: -1
 
 
