DATACOUCH-144 - Detect N1QL dependency and fail fast if not available.
Detect N1QL is not available at configuration time for the repositories and at runtime for the template. This throws a UnsupportedCouchbaseFeatureException.

The ClusterInfo is captured at bootstrap and used to determine if the feature is available. The xml configuration will need the ClusterInfo-related credentials to be provided explicitly.

--- a/src/main/asciidoc/configuration.adoc
+++ b/src/main/asciidoc/configuration.adoc
@@ -111,6 +111,10 @@ The library provides a custom namespace that you can use in your XML configurati
       <couchbase:node>127.0.0.1</couchbase:node>
     </couchbase:cluster>
 
+    <!-- This is needed to probe the server for N1QL support -->
+    <!-- Can be either cluster credentials or a bucket credentials -->
+    <couchbase:clusterInfo login="beer-sample" password=""/>
+
     <couchbase:bucket bucketName="beer-sample" bucketPassword=""/>
 </beans:beans>
 ----
