--- a/src/main/asciidoc/entity.adoc
+++ b/src/main/asciidoc/entity.adoc
@@ -6,17 +6,23 @@ This chapter describes how to model Entities and explains their counterpart repr
 [[basics]]
 == Documents and Fields
 
-All entities should be annotated with the `@Document` annotation. Also, every field in the entity should be annotated with the `@Field` annotation. While this is - strictly speaking - optional, it helps to reduce edge cases and clearly shows the intent and design of the entity.
+All entities should be annotated with the `@Document` annotation.
 
-There is also a special `@Id` annotation which needs to be always in place. Best practice is to also name the property `id`. Here is a very simple `User` entity:
+Also, every field in the entity should be annotated with the `@Field` annotation from the Couchbase SDK. While this is - strictly speaking - optional, it helps to reduce edge cases and clearly shows the intent and design of the entity. It can also be used to store the field under a different name.
+
+There is also a special `@Id` annotation which needs to be always in place. Best practice is to also name the property `id`.
+
+TIP: Both the Couchbase SDK and Spring Data define their own `@Id` annotation. Either can be used (the Spring Data one will get priority if both are found on different fields).
+
+Here is a very simple `User` entity:
 
 .A simple Document with Fields
 ====
 [source,java]
 ----
-import org.springframework.data.annotation.Id;
+import com.couchbase.client.java.repository.annotation.Id;
+import com.couchbase.client.java.repository.annotation.Field;
 import org.springframework.data.couchbase.core.mapping.Document;
-import org.springframework.data.couchbase.core.mapping.Field;
 
 @Document
 public class User {
