--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.3.2.RELEASE (2015-07-28)
+---------------------------------------------
+* DATACOUCH-153 - Release 1.3.2 (Fowler).
+* DATACOUCH-151 - NullPointerException on auto-boxing in CouchbaseTemplate.
+
+
 Changes in version 1.1.6.RELEASE (2015-07-01)
 ---------------------------------------------
 * DATACOUCH-133 - Fix typos in README.
