--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -17,6 +17,19 @@ Changes in version 2.0.0.M1 (2015-07-03)
 =================================================================================
 
 
+Changes in version 1.4.0.RC1 (2015-08-04)
+-----------------------------------------
+* DATACOUCH-157 - Release 1.4 RC1 (Gosling).
+* DATACOUCH-151 - NullPointerException on auto-boxing in CouchbaseTemplate.
+* DATACOUCH-149 - Switch from BeanWrapper to PersistentPropertyAccessor.
+* DATACOUCH-133 - Fix typos in README.
+* DATACOUCH-129 - Ensure Spring Framework 4.2 compatibility.
+
+Changes in version 1.3.2.RELEASE (2015-07-28)
+---------------------------------------------
+* DATACOUCH-153 - Release 1.3.2 (Fowler).
+* DATACOUCH-151 - NullPointerException on auto-boxing in CouchbaseTemplate.
+
 Changes in version 1.1.6.RELEASE (2015-07-01)
 ---------------------------------------------
 * DATACOUCH-133 - Fix typos in README.
